# prism

./: .gitignore  README.md  pyproject.toml
baselines/: FlexPrefill.py  Minference.py  XAttention.py  __init__.py
data/: ruler_niah_multikey_3_32k_0.json  ruler_qa_squad_32k_0.json
eval/: efficiency_comparison.py  run_lm_eval.py  run_lmms_eval.py
eval/lm-evaluation-harness/lm_eval/tasks/pg19/: pg19.yaml  utils.py
eval/lm-evaluation-harness/lm_eval/tasks/ruler/: cwe_utils.py  fwe_utils.py  niah_utils.py  qa_utils.py  vt.yaml  vt_utils.py
eval/lmms-eval/lmms_eval/models/simple/: qwen3_vl.py
eval/lmms-eval/lmms_eval/tasks/videomme/: utils.py  videomme_long.yaml  videomme_long_w_subtitle.yaml  videomme_medium.yaml  videomme_medium_w_subtitle.yaml  videomme_short.yaml  videomme_short_w_subtitle.yaml
prism/: __init__.py  prism.py
prism/kernels/: block_sparse_attn.py  block_sparse_attn_paged.py  paged_kernels.py  prism_estimation.py
prism/utils/: patch.py  patch_prism_sglang.py  stat_collector.py
scripts/: efficiency.sh  longbench.sh  longvideobench.sh  pg19.sh  ruler.sh  videomme.sh
