[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prism"
version = "0.1.0"
description = "Implementation of Prism: Spectral-Aware Block Sparse Attention"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "transformers>=5.0.0",
    "accelerate"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["prism*"]
